fixed collapse

--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+body {
+  font-family: mr-eaves-xl-modern, sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 h1 {
   color: #651fff;
 }
